[gd_scene load_steps=14 format=3 uid="uid://br0ilkuqrn1jp"]

[ext_resource type="Texture2D" uid="uid://7bvut2r1kvra" path="res://textures/enemies/big_slorg/big_slorg1.png" id="1"]
[ext_resource type="Texture2D" uid="uid://cue8hp3ok1nkr" path="res://textures/enemies/big_slorg/big_slorg7.png" id="2"]
[ext_resource type="Texture2D" uid="uid://b5jtmvusxnfu0" path="res://textures/enemies/big_slorg/big_slorg5.png" id="3"]
[ext_resource type="Texture2D" uid="uid://bcakqdcv5ue80" path="res://textures/enemies/big_slorg/big_slorg6.png" id="4"]
[ext_resource type="Texture2D" uid="uid://c16xdd4h6td3o" path="res://textures/enemies/big_slorg/big_slorg4.png" id="5"]
[ext_resource type="Script" path="res://scripts/enemies/Slorg.gd" id="6"]
[ext_resource type="Texture2D" uid="uid://dk2h3gdwfhwva" path="res://textures/enemies/big_slorg/big_slorg2.png" id="7"]
[ext_resource type="Texture2D" uid="uid://dk038d3iss4w1" path="res://textures/enemies/big_slorg/big_slorg3.png" id="8"]
[ext_resource type="Texture2D" uid="uid://bgfht1wwsrhc6" path="res://textures/enemies/seen.png" id="9"]
[ext_resource type="FontFile" path="res://fonts/pixel.tres" id="10"]

[sub_resource type="SpriteFrames" id="1"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("1")
}, {
"duration": 1.0,
"texture": ExtResource("5")
}, {
"duration": 1.0,
"texture": ExtResource("3")
}, {
"duration": 1.0,
"texture": ExtResource("4")
}, {
"duration": 1.0,
"texture": ExtResource("2")
}, {
"duration": 1.0,
"texture": ExtResource("5")
}, {
"duration": 1.0,
"texture": ExtResource("1")
}],
"loop": false,
"name": &"attack",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("1")
}, {
"duration": 1.0,
"texture": ExtResource("7")
}, {
"duration": 1.0,
"texture": ExtResource("1")
}, {
"duration": 1.0,
"texture": ExtResource("8")
}],
"loop": false,
"name": &"hop",
"speed": 8.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("8")
}, {
"duration": 1.0,
"texture": ExtResource("1")
}, {
"duration": 1.0,
"texture": ExtResource("7")
}, {
"duration": 1.0,
"texture": ExtResource("1")
}],
"loop": false,
"name": &"land",
"speed": 8.0
}]

[sub_resource type="RectangleShape2D" id="2"]
size = Vector2(6, 6)

[sub_resource type="CircleShape2D" id="3"]
radius = 4.0078

[node name="Slorg" type="CharacterBody2D" groups=["enemy"]]
z_index = 1
collision_layer = 8
script = ExtResource("6")
hostile = true
bluesDropRange = [2, 7]
type = "slorg"

[node name="Body" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("1")
animation = &"attack"
frame = 6

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, 3.5)
shape = SubResource("2")

[node name="Seen" type="Sprite2D" parent="."]
visible = false
position = Vector2(0, -7)
texture = ExtResource("9")

[node name="seeTimer" type="Timer" parent="."]
wait_time = 5.0
one_shot = true

[node name="HitBox" type="Area2D" parent="."]
position = Vector2(0, 3)
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="HitBox"]
position = Vector2(0, -0.25)
shape = SubResource("3")

[node name="HurtTimer" type="Timer" parent="."]

[node name="Label" type="Label" parent="."]
visible = false
offset_left = -11.0
offset_top = -6.0
offset_right = 12.0
offset_bottom = 8.0
theme_override_fonts/font = ExtResource("10")
text = "state"

[connection signal="animation_finished" from="Body" to="." method="_on_AnimatedSprite_animation_finished"]
[connection signal="timeout" from="seeTimer" to="." method="_on_seeTimer_timeout"]
[connection signal="body_entered" from="HitBox" to="." method="_on_HitBox_body_entered"]
[connection signal="body_exited" from="HitBox" to="." method="_on_HitBox_body_exited"]
[connection signal="timeout" from="HurtTimer" to="." method="_on_HurtTimer_timeout"]
